--- a/README
+++ b/README
@@ -1,23 +1,52 @@
+% Project: Turing Machine
+% Course:  Funcional and Logical Programming
+% Author:  Tomas Bruckner, xbruck02@stud.fit.vutbr.cz
+% Date:	   2016-04-26
+%
+
 Program parsuje stdin, kde poslední řádek je počáteční páska, ostatní řádky jsou
 přechodové pravidla Turingova stroje.
 Automat může:
 1 - Normálně zastavit, což vede k vypsání jednotlivých konfigurací, které vedou
-    do koncového stavu. 
+    do koncového stavu.
 2 - Abnormálně zastavit, pokud neexistuje způsob se dostat do koncového stavu,
     což vede k vypsání hlášky "Abnormal halt!".
 3 - Cyklit, což vede ke skončení vyčerpáním paměti.
 
-Odevzdané testovací soubory:
-  test_blank_tape.in
-  test_blank_transition.in
-  test_example.in
-  test_halt_left_shift.in
-  test_halt_no_transition.in 	
-  test_nondeterministic.in
 
 Překlad:
-	gmake
+    gmake
 
-Smazání:
-	gmake clean
+Smazání binárky:
+    gmake clean
 
+Odevzdané testovací soubory, měřeno na serveru Merlin:
+  test_blank_tape.in
+    real    0m0.027s
+    user    0m0.017s
+    sys     0m0.006s
+
+  test_blank_transition.in
+    real    0m0.027s
+    user    0m0.018s
+    sys     0m0.003s
+
+  test_example.in
+    real    0m0.026s
+    user    0m0.016s
+    sys     0m0.008s
+
+  test_halt_left_shift.in
+    real    0m0.025s
+    user    0m0.017s
+    sys     0m0.005s
+
+  test_halt_no_transition.in
+    real    0m0.021s
+    user    0m0.016s
+    sys     0m0.003s
+
+  test_nondeterministic.in
+    real    0m0.061s
+    user    0m0.016s
+    sys     0m0.007s
